--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -2,26 +2,27 @@
 <!-- Main wrapper - style you can find in pages.scss -->
 <!-- ============================================================== -->
 <div id="main-wrapper">
-    <app-header></app-header>
-  
-    <app-sidebar></app-sidebar>
-  
+  <app-header></app-header>
+
+  <app-sidebar></app-sidebar>
+
+  <!-- ============================================================== -->
+  <!-- Page wrapper  -->
+  <!-- ============================================================== -->
+  <div class="page-wrapper">
     <!-- ============================================================== -->
-    <!-- Page wrapper  -->
+    <!-- Container fluid  -->
     <!-- ============================================================== -->
-    <div class="page-wrapper">
+    <div class="container-fluid">
+
+      <app-breadcrumbs></app-breadcrumbs>
+
       <!-- ============================================================== -->
-      <!-- Container fluid  -->
+      <!-- Start Page Content -->
       <!-- ============================================================== -->
-      <div class="container-fluid">
-  
-        <app-breadcrumbs></app-breadcrumbs>
-        
-        <!-- ============================================================== -->
-        <!-- Start Page Content -->
-        <!-- ============================================================== -->
-        <router-outlet></router-outlet>
-        <!--<div class="row">
+      <router-outlet></router-outlet>
+      <!--
+        <div class="row">
           <div class="col-12">
             <div class="card">
               <div class="card-body">
@@ -29,16 +30,17 @@
               </div>
             </div>
           </div>
-        </div>-->
-        <!-- ============================================================== -->
-        <!-- End PAge Content -->
-        <!-- ============================================================== -->
-      </div>
+        </div>
+      -->
       <!-- ============================================================== -->
-      <!-- End Container fluid  -->
+      <!-- End PAge Content -->
       <!-- ============================================================== -->
     </div>
     <!-- ============================================================== -->
-    <!-- End Page wrapper  -->
+    <!-- End Container fluid  -->
     <!-- ============================================================== -->
   </div>
+  <!-- ============================================================== -->
+  <!-- End Page wrapper  -->
+  <!-- ============================================================== -->
+</div>
