--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,3 +1,36 @@
-<p>
-  progress works!
-</p>
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">Barra de progreso</h4>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+            [attr.ariaValuenow]="progreso1" [style.width]="progreso1 + '%'" aria-valuemax="100"></div>
+        </div>
+        <br>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+            [attr.ariaValuenow]="progreso2" [style.width]="progreso2 + '%'" aria-valuemax="100"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-incrementador (cambioValor)="progreso1 = $event" leyenda="Progress Azul" [progreso]="progreso1"></app-incrementador>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-incrementador (cambioValor)="progreso2 = $event" leyenda="Progress Verde" [progreso]="progreso2"></app-incrementador>
+      </div>
+    </div>
+  </div>
+</div>
